Feb 04 2004  3.1.0  Merged more diffs from Pedro to fix the stackprot alerts on
                     OpenBSD
                    Changed framework of unmonitor support.  This breaks some 
                     things right now, this sync only temporary.  Expect a 
                     fully fixed devel sync later this afternoon.
                    Added unmonitor suppor for HostAP, fixed broken stuff from
                     earlier.
Feb 02 2004  3.1.0  Tweaked probe req handling to assign to_ds
                    Changed panels channel display to show --- for uncontrolled
                     source channels
Feb 01 2004  3.1.0  Fixed broken channel stuff in wlanng to use stored last
                     channel if wext isn't available.
                    Added source picking window for channel locking on multiple
                     sources
                    Added smarter channel hopping setup, added server hopping
                     status to KISMET protocol
Jan 31 2004  3.1.0  wlanng no longer depends on wireless extentions
Jan 28 2004  3.1.0  Panels client now scrolls to next network after tagging
                    Fixed changelog dates (Thanks Alexander...)
                    Added a dirty flag to tcpclient networks listing to save
                     on CPU usage when the network list isn't actually changing
                    Improved use of the dirty flag to conserve cpu
                    Fixed init of a variable in panels
                    Fixed various bugs in panels
Jan 27 2004  3.1.0  Modified internals to packet source handling to allow for
                     restoring card details on sources that support it
                    Merged patch from Pedro for more OpenBSD stuff
                    Merged patch from Sam for more radiotap support on freebsd.
                     Pending a patch to the MadWifi drivers, this should bring
                     functional support for FreeBSD.