@@ -1235,12 +1235,34 @@ int monitor_madwifi_comb(const char *in_dev, int initch, char *in_err, void **in
 // Call the standard monitor but ignore error codes since channel
 // setting won't work.  This is a temp kluge.
 int monitor_prism54g(const char *in_dev, int initch, char *in_err, void **in_if) {
+    // Allocate a tracking record for the interface settings and remember our
+    // setup
+    linux_ifparm *ifparm = (linux_ifparm *) malloc(sizeof(linux_ifparm));
+    (*in_if) = ifparm;
+    if (Ifconfig_Get_Linux(in_dev, in_err, &ifparm->ifaddr, &ifparm->dstaddr,
+                           &ifparm->broadaddr, &ifparm->maskaddr, &ifparm->flags) < 0) {
+        return -1;
+    }
+
+    if (Iwconfig_Get_SSID(in_dev, in_err, ifparm->essid) < 0)
+        return -1;
+
+    if ((ifparm->channel = Iwconfig_Get_Channel(in_dev, in_err)) < 0)
+        return -1;
+
+    if (Iwconfig_Get_Mode(in_dev, in_err, &ifparm->mode) < 0)
+        return -1;
+
     int ret = monitor_wext(in_dev, initch, in_err, in_if);
 
     if (ret < 0 && ret != -2)
         return ret;
     
     return 0;
+}
+
+int unmonitor_prism54g(const char *in_dev, int initch, char *in_err, void **in_if) {
+    return unmonitor_wext(in_dev, initch, in_err, in_if);
 }
 
 // "standard" wireless extension monitor mode
@@ -1303,6 +1325,30 @@ int monitor_wext(const char *in_dev, int initch, char *in_err, void **in_if) {
     close(skfd);
     return 0;
 }
+
+int unmonitor_wext(const char *in_dev, int initch, char *in_err, void **in_if) {
+    // Restore the IP settings
+    linux_ifparm *ifparm = (linux_ifparm *) (*in_if);
+
+    if (Ifconfig_Set_Linux(in_dev, in_err, &ifparm->ifaddr, &ifparm->dstaddr,
+                           &ifparm->broadaddr, &ifparm->maskaddr, ifparm->flags) < 0) {
+        return -1;
+    }
+
+    if (Iwconfig_Set_Mode(in_dev, in_err, ifparm->mode) < 0)
+        return -1;
+
+    if (Iwconfig_Set_Channel(in_dev, ifparm->channel, in_err) < 0)
+        return -1;
+
+    if (Iwconfig_Set_SSID(in_dev, in_err, ifparm->essid) < 0)
+        return -1;
+    
+    free(ifparm);
+
+    return 0;
+}
+
 #endif
 
 #ifdef SYS_LINUX
